<resources>
    <string name="app_name">Owntracks</string>
    <string name="action_settings">Settings</string>
    <string name="titleActivityPreferences">"Settings"</string>
    <string name="titleActivityStatus">"Status"</string>
    <string name="titleMap">"Map"</string>
    <string name="titleFriends">"Locations"</string>
    <string name="titleStatus">"Status"</string>
    <string name="preferencesServerTitle">"Connection"</string>
    <string name="preferencesServerAddress">"Host"</string>
    <string name="preferencesServerPort">"Port"</string>
    <string name="preferencesUserUsername">"Username"</string>
    <string name="preferencesDeviceName">"Device ID"</string>
    <string name="preferencesConnectionSecurity">"Connection security"</string>
    <string name="preferencesBrokerAuth">"Authentication"</string>
    <string name="preferencesBrokerUsernameUseUserUsername">"Use username"</string>
    <string name="preferencesBrokerPassword">"Password"</string>
    <string name="preferencesCaCrtPath">Absolute certificate path</string>
    <string name="preferencesBrokerClientId">"Client ID"</string>
    <string name="preferencesServerCancel">"Disconnect"</string>
    <string name="preferencesServerConnect">"Connect"</string>
    <string name="preferencesLicensesTitle">"Licenses"</string>
    <string name="preferencesLicensesSummary">"Details for included open-source software"</string>
    <string name="preferencesLicensesDismiss">"Dismiss"</string>
    <string name="preferencesNotification">Notifications</string>
    <string name="preferencesNotificationTickerOnPublishSummary">Show a ticker on successful reports</string>
    <string name="preferencesNotificationTickerOnPublishTitle">Ticker on report</string>
    <string name="preferencesNotificationTickerOnWaypointTransitionSummary">Show a ticker on waypoint events </string>
    <string name="preferencesNotificationTickerOnWaypointTransitionTitle">Ticker on waypoint </string>
    <string name="preferencesNotificationSummary">"Display a notification to keep running"</string>
    <string name="preferencesNotificationTitle">"Notification"</string>
    <string name="preferencesNotificationLocationSummary">"Display last reported location and time"</string>
    <string name="preferencesNotificationLocationTitle">"Last reported location"</string>
    <string name="preferencesNotificationGeocoderSummary">"Resolve displayed location to addresses"</string>
    <string name="preferencesNotificationGeocoderTitle">"Geocoder"</string>
    <string name="preferencesAdvancedConnectionSummary">"Show advanced connection preferences"</string>
    <string name="preferencesAdvancedConnectionTitle">"Advanced connection preferences"</string>
    <string name="preferencesAdvancedTitle">"Advanced"</string>
    <string name="preferencesVersionTitle">"Version"</string>
    <string name="preferencesTopicSettings">"Reporting"</string>
    <string name="preferencesTopic">"Publish topic"</string>
    <string name="preferencesTopicSummary">"The topic to which locations will be published"</string>
    <string name="preferencesRetain">"Publish retained"</string>
    <string name="preferencesRetainSummary">"Retained flag for publishes"</string>
    <string name="preferencesQOS">"Publish QOS"</string>
    <string name="preferencesQOSSummary">"QOS for publishes"</string>
    <string name="preferencesActivity">"Background activity"</string>
    <string name="preferencesBackgroundUpdatesInterval">Reporting interval</string>
    <string name="preferencesBackgroundUpdatesIntervalSummary">Minutes between automatic reporting</string>
    <string name="preferencesBackroundUpdates">Automatic location reporting</string>
    <string name="preferencesBackgroundUpdatesSummary">Report location automatically</string>
    <string name="preferencesLocatorBackgroundDisplacement">Locator displacement</string>
    <string name="preferencesLocatorBackgroundDisplacementSummary">Distance between location updates</string>
    <string name="preferencesLocatorBackgroundInterval">Locator interval</string>
    <string name="preferencesLocatorBackgroundIntervalSummary">Minutes between location updates</string>
    <string name="preferencesInfo">Information</string>
    <string name="preferencesRepository">Source Code</string>
    <string name="preferencesRepositorySummary">github.com/owntracks/android</string>
    <string name="preferencesTwitter">Twitter</string>
    <string name="preferencesTwitterSummary">twitter.com/owntracks</string>
    <string name="preferencesDonate">Donate Bitcoins</string>
    <string name="preferencesDonateSummary">1DYpxrXRLQe5eLnT2FncyxjuQGBgWjtX2t</string>
    <string name="preferencesMailTitle">Mail</string>
    <string name="preferencesMailSummary">issues@owntracks.org</string>
    <string name="connectivityConnecting">"Connecting"</string>
    <string name="connectivityConnected">"Connected"</string>
    <string name="connectivityDisconnecting">"Disconnecting"</string>
    <string name="connectivityDisconnected">"Disconnected"</string>
    <string name="connectivityDisconnectedUserDisconnect">"Disconnected: By user"</string>
    <string name="connectivityDisconnectedDataDisabled">"Disconnected: Data disabled"</string>
    <string name="na">Not available</string>
    <string name="currentLocation">Current</string>
    <string name="shareLocation">Share location"</string>
    <string name="save">"Save"</string>
    <string name="cancel">"Cancel"</string>
    <string name="error">"Error"</string>
    <string name="statePublished">"Location reported"</string>
    <string name="stateNotopic">"Error: No topic set"</string>
    <string name="statePublishTimeout">"Error: Timeout"</string>
    <string name="stateLocatingFail">"Error: Unable to acquire location"</string>
    <string name="statePublishing">"Reporting"</string>
    <string name="stateWaiting">"Waiting for connection"</string>
    <string name="stateIdle">"Idle"</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">tbd</string>
    <string name="submit_confirm_message">tbd</string>
    <string name="submit_confirm_button">tbd</string>
    <string name="preferencesContactSettings">Contacts</string>
    <string name="preferencesContactsEnabledTitle">Subscribe</string>
    <string name="preferencesContactsEnabledSummary">Subscribe to receive messages</string>
    <string name="preferencesContactsTopic">Subscribe topic</string>
    <string name="preferencesContactsTopicSummary">Topic on which messages are received</string>
    <string name="publish">Report</string>
    <string name="preferencesIncludeBatterySummary">Include the device battery level in reports</string>
    <string name="preferencesIncludeBatteryTitle">Include battery</string>
    <string name="contactsLinkCloudStorageEnabledSummary">Store contact links in Google address book</string>
    <string name="contactsLinkCloudStorageEnabledTitle">Update address book</string>
    <string name="preferencesAutostartSummary">Automatically start on device boot</string>
    <string name="preferencesAutostartTitle">Autostart</string>
    <string name="preferencesLocatorAccuracyBackground">Locator background accuracy</string>
    <string name="preferencesLocatorAccuracyBackgroundSummary">Accuracy and power usage when active</string>
    <string name="preferencesLocatorAccuracyForeground">Locator foreground accuracy</string>
    <string name="preferencesLocatorAccuracyForegroundSummary">Accuracy and power usage in the background</string>
    <string name="description">Description</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="radius">Radius</string>
	<string name="share">Share</string>
    <string name="transitionType">Transition</string>
    <string name="notification">Notification</string>
    <string name="notificationTitle">Notification title</string>
    <string name="waypointEdit">Edit waypoint</string>
    <string name="waypointAdd">Add waypoint</string>
    <string name="actionModeOneSelected">1 item selected</string>
    <string name="actionModeMoreSelected">items selected</string>
    <string name="currentLocationNotAvailable">The current location is not available</string>
    <string name="copiedToClipboard">Bitcoin address copied to clipboard</string>
	<string name="addWaypoint">Add waypoint</string>
	<string name="preferences">Preferences</string>
	<string name="waypoints">Waypoints</string>
    <string-array name="connect_options_security">
        <item>None</item>
        <item>TLS</item>
        <item>TLS (Custom Certificate)</item>
    </string-array>
    <string-array name="connect_options_auth">
        <item>Anonymous</item>
        <item>Username / Password</item>
    </string-array>
    <string-array name="qos_readable">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
    </string-array>
    <string-array name="locatorAccuracy_readable">
        <item>High power</item>
        <item>Balanced power</item>
        <item>Low power</item>
        <item>No power</item>
    </string-array>
    <string-array name="transitionType_readable">
        <item>@string/transitionEnter</item>
        <item>@string/transitionLeave</item>
        <item>@string/transitionBoth</item>
    </string-array>
    <string name="reportOn">Report on</string>
    <string name="transitionEnter">Enter</string>
    <string name="transitionLeave">Leave</string>
    <string name="transitionBoth">Enter and Leave</string>
    <string name="transitionEntering">Entering</string>
    <string name="transitionLeaving">Leaving</string>
    <string name="title_activity_activity_launcher">ActivityLauncher</string>
    <string name="title_activity_activity_wizzard">Wizzard</string>
    <string name="title_test_list">tests</string>
    <string name="title_test_detail">test Detail</string>
    <string name="keyDeviceName">deviceName</string>
    <string name="keyBrokerHost">brokerHost</string>
    <string name="keyBrokerPort">brokerPort</string>
    <string name="keyBrokerPassword">brokerPassword</string>
    <string name="keyBrokerUsername">userUsername</string>
    <string name="keyBrokerAuth">brokerAuth</string>
    <string name="keyBrokerSecurity">brokerSecurity</string>
    <string name="keyBrokerSecuritySslCaPath">brokerSecuritySslCaPath</string>
    <string name="keyPubAutoEnabled">backgroundUpdates</string>
    <string name="keyPubAutoInterval">backgroundUpdatesInterval</string>
    <string name="keyPubTopic">topic</string>
    <string name="keyPubRetain">retain</string>
    <string name="keyPubQos">qos</string>
    <string name="keyPubIncludeBattery">includeBattery</string>
    <string name="keyNotificationEnabled">notificationEnabled</string>
    <string name="keyNotificationGeocoderEnabled">notificationGeocoder</string>
    <string name="keyNotificationLocationEnabled">notificationLocation</string>
    <string name="keyNotificationTickerPublish">notificationTickerOnPublishEnabled</string>
    <string name="keyNotificationTickerGeofence">tickerOnWaypointTransitionEnabled</string>
    <string name="keyTrackingUsername">trackingUsername</string>
    <string name="keySubEnabled">subEnabled</string>
    <string name="keySubTopic">subTopic</string>
    <string name="keyContactsLinkCloudStorageEnabled">contactsLinkCloudStorageEnabled</string>
    <string name="keyAdvancedConnectionPreferencesEnabled">advancedMode</string>
    <string name="keyAutostartOnBootEnabled">autostartOnBoot</string>
    <string name="keyLocatorBackgroundDisplacement">backgroundDisplacement</string>
    <string name="keyLocatorAccuracyBackground">locatorAccuracyBackground</string>
    <string name="keyLocatorAccuracyForeground">locatorAccuracyForeground</string>
    <string name="keyLocatorBackgroundInterval">backgroundInterval</string>
    <string name="valPubTopic" formatted="false">owntracks/%s/%s</string>
</resources>