<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <st.alr.mqttitude.preferences.PreferencesBroker
        android:key="brokerPreference"
        android:negativeButtonText="@string/preferencesServerCancel"
        android:positiveButtonText="@string/preferencesServerConnect"
        android:title="@string/preferencesServerTitle" />

    <EditTextPreference
        android:dialogTitle="Topic"
        android:key="location_topic"
        android:summary="The topic to which the location will be published"
        android:title="Topic" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="backgroundUpdates"
        android:summary="@string/preferencesAutomaticPublishes"
        android:title="@string/preferencesAutomaticPublishesTitle" />
    
    <EditTextPreference
                android:defaultValue="30"
        
        android:dependency="backgroundUpdates"
        android:inputType="number" 
        android:dialogTitle="Interval"
        android:key="backgroundUpdateInterval"
        android:summary="Interval in minutes between publishes"
        android:title="Interval" />
    
    
    
    
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notificationEnabled"
        android:summary="@string/preferencesNotificationSummary"
        android:title="@string/preferencesAutomaticPublishesTitle" />
	
    <st.alr.mqttitude.preferences.ImplementedDialogPreference
        android:dialogLayout="@layout/preferences_licenses"
        android:negativeButtonText=""
        android:positiveButtonText="@string/preferencesLicensesDismiss"
        android:summary="@string/preferencesLicensesSummary"
        android:title="@string/preferencesLicensesTitle" />

    <Preference
        android:key="versionReadOnly"
        android:title="@string/preferencesVersionTitle" />

</PreferenceScreen>